# DSA_TP1

./: .gitattributes  .gitignore  .gitmodules  .readthedocs.yaml  Makefile  README.md  annotated.html  annotated_dup.js  classes.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  files.html  globals.html  globals_func.html  graph_8h.html  graph_8h.js  graph_8h_source.html  index.html  list_8h.html  list_8h.js  list_8h_source.html  mkdocs.yml  navtreeindex0.js  p_Bis.csv  plots.r  qsort.h  qtest.c  queue_8h_source.html  stack_8h.html  stack_8h.js  stack_8h_source.html  structGraph-members.html  structGraph.html  structQueue-members.html  structQueue.html  structStack-members.html  structStack.html  structnode__t-members.html  structnode__t.html
.github/workflows/: Doxygen.yml  mac.yml  ubuntu.yml  windows-latest.yml
TP1/: .gitignore  Makefile  df_p5_all.tex  p_Lomuto.csv  p_Sedgewick.csv  plots.r  q  qmain.c  qsort.c  qsort.h  qtest.c
TP1/cod/: p_Hoare.csv  plots.r  q  qmain.c
TP1/tex/: article_template.aux  article_template.fdb_latexmk  article_template.fls  article_template.tex  dsa_template.aux  test.tex
TP1/tex/plots/: df_bis_all.tex  df_bis_ucmp.tex  df_bis_ucmp_logs.tex  df_bis_ucmp_reg.tex  df_bis_uech.tex  df_p5_all.tex
TP2/: .gitattributes  .gitignore  .readthedocs.yaml  CMakeLists.txt  Doxyfile  g  g5.dot  graphes.c  main.c  mkdocs.yml  rev.dot  test.dot
TP2/docs/: example.md  list.md  stack.md
TP2/dot/: dg1.dot  e.dot  e10.dot  e_1.dot  g1.dot  g2.dot  g3.dot  g4.dot
TP2/include/: graph.h  list.h  queue.h  stack.h
TP2/instances/: digraph-1.txt  graph-1.txt  graph-2.txt  graph-3.txt  graph-4.txt  graph-5.txt  migraph-1.txt  my_graph.txt
TP2/site/: 404.html  index.html  search.html
TP2/site/example/: index.html
TP2/site/graph/: index.html
TP2/site/list/: index.html
TP2/site/overview/: index.html
TP2/site/search/: search_index.json
TP2/site/stack/: index.html
TP2/src/: CMakeLists.txt  graph.c  graphes.c  list.c  queue.c  stack.c
TP2/test/: CMakeLists.txt  test_queue.c  tgraph.c  tqueue.c  tstack.c
TP2/tex/: article_template.tex  preamble.tex
TP3/: .gitignore  CMakeLists.txt  a.out  docs.c  ejovo_tests.c  list_test  list_test.c  main.c  mkdocs.yml  plots.r  rando.dot  random.dot  test_rem.dot  test_rem1.dot  test_rem10.dot  test_rem13.dot
TP3/cod/: average_data.csv  main.c
TP3/cod/include/: list.h
TP3/cod/src/: CMakeLists.txt  tree.c
TP3/cod/test/: CMakeLists.txt  tdsa_tp3.c
TP3/cod/tex/: preamble.tex
TP3/docs/: bintree.md  index.md
TP3/dot/: rando.dot  random.dot  test.dot
TP3/include/: tree.h
TP3/src/: CMakeLists.txt  list.c  tree.c
TP3/test/: CMakeLists.txt  taddkey.c  tdsa_tp3.c
TP3/tex/: article_template.tex
TP4/: avl.c
TP4/cod/: .gitignore  avl  avl.c
TP4/cod/tex/: article_template.tex
TP4/cod/tex/media/: average_height.tex
docs/: index.md
docs/TP1/: index.md
docs/TP2/: index.md
docs/TP2/docs/: graph.md  index.md  overview.md  stack.md
docs/TP3/: index.md
docs/TP3/docs/: index.md
search/: all_1.js  all_2.js  all_3.js  all_4.js  all_6.js  all_7.js  all_a.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  searchdata.js
tex/: article_template.tex
tex/plots/: example_plot.tex  plot.tex
